--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "name": "glassterspa",
+  "name": "SWEDUPHX",
+  "repository" :
+  { 
+    "type" : "git",
+    "url" : "https://github.com/timothyswt/SWEDUPHX.git"
+  },
   "version": "0.0.0",
   "dependencies": {
     "express": "~3.4.3",
