--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "start": "node dist/server.js",
+    "test": "grunt test",
+    "postinstall": "bower install && grunt build"
   }
 }
