--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "socket.io": "~0.9.16",
     "q": "~1.0.1",
     "moment": "~2.5.1",
-    "mongodb": "^1.4.2"
+    "mongodb": "^1.4.2",
+    "bower": "^1.3.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
