--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "q": "~1.0.1",
     "moment": "~2.5.1",
     "mongodb": "^1.4.2",
-    "bower": "^1.3.3"
+    "bower": "^1.3.3",
+    "grunt": "~0.4.4",
+    "grunt-cli": "~0.1.13"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~0.7.0",
     "grunt-concurrent": "~0.4.1",
@@ -63,13 +65,14 @@
     "grunt-env": "~0.4.1",
     "grunt-node-inspector": "~0.1.3",
     "grunt-nodemon": "~0.2.0",
-    "open": "~0.0.4"
+    "open": "~0.0.4",
+    "grunt-cli": "~0.1.13"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build"
   }
 }
