--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt build"
+    "postinstall": "./node_modules/bower/bin/bower install && grunt build"
   }
 }
