--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,14 @@
 {
-  "name": "glasster-spa",
-  "version": "0.0.0",
+  "name": "inGauge",
+  "version": "0.0.1",
   "dependencies": {
-    "angular": "1.2.11",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
+    "angular": "1.2.11",
     "bootstrap": "~3.0.3",
     "angular-resource": "1.2.11",
     "angular-cookies": "1.2.11",
     "angular-sanitize": "1.2.11",
     "angular-route": "1.2.11",
-    "select2": "~3.4.6",
-    "angular-ui": "~0.4.0",
-    "angular-ui-select2": "~0.0.5",
-    "d3": "~3.4.4",
     "angular-bootstrap": "~0.10.0",
     "socket.io-client": "~0.9.16",
     "angular-socket-io": "~0.4.1",
