--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-bootstrap": "~0.10.0",
     "socket.io-client": "~0.9.16",
     "angular-socket-io": "~0.4.1",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "angular-ui": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.11",
